--- a/index.html
+++ b/index.html
@@ -2,12 +2,16 @@
 <html lang="">
   <head>
     <meta charset="UTF-8">
-    <link rel="icon" href="/favicon.ico">
+<!--    <link rel="icon" href="/favicon.ico">-->
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="icon" type="image/png" href="/favicon.png" sizes="32x23" />
+    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" sizes="32x23" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vite App</title>
+    <title>Știri de top</title>
   </head>
   <body>
     <div id="app"></div>
+    <!--suppress HtmlUnknownTarget -->
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
